--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,23 +32,23 @@ jobs:
       matrix:
         go: ['1.16', '1.17']
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go }}
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Run tests
-      if: ${{ matrix.go != '1.17' }}
-      run: go test -race ./...
-    - name: Run tests & generate coverage report
-      if: ${{ matrix.go == '1.17' }}
+    - name: Create artifacts directory
       run: |
-        COVERPKG=$(go list ./... | tr '\n' ,)
-        COVERPKG=${COVERPKG%?}
-        go test -race -coverpkg=${COVERPKG} -coverprofile=coverage.out -covermode=atomic ./...
+        rm -rf artifacts
+        mkdir artifacts
+    - name: Setup
+      env:
+        DOCKER_BUILDKIT: 1
+        COMPOSE_DOCKER_CLI_BUILD: 1
+      run: docker-compose build --pull --build-arg GO=${{ matrix.go }}
+    - name: Run tests
+      run: docker-compose run --rm vasc
     - name: Upload coverage report
-      if: ${{ hashFiles('coverage.out') != '' }}
+      if: ${{ matrix.go == '1.17' }}
       uses: shogo82148/actions-goveralls@v1
       with:
-        path-to-profile: coverage.out
+        path-to-profile: artifacts/coverage.out
+    - name: Teardown
+      run: docker-compose rm -v --stop --force
