--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,11 @@ indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.vcl]
+[testdata/*.transcript]
+trim_trailing_whitespace = false
+insert_final_newline = false
+
+[*{.yml,.vcl}]
 indent_style = space
 indent_size = 2
+
