--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,14 +33,14 @@ jobs:
       secure:
         image: azazeal/vasctest:latest
         ports:
-          - 10000:10000
+          - 10000
 
       insecure:
         image: azazeal/vasctest:latest
         env:
           INSECURE: true
         ports:
-          - 10001:10000
+          - 10000
 
     strategy:
       matrix:
@@ -55,6 +55,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests
       run: go test -race -coverpkg=./... -coverprofile=coverage.cov -covermode=atomic ./...
+      env:
+        SECURE_HOST: localhost:${{ job.services.secure.ports[10000] }}
+        SECRET: supersecret
+        INSECURE_HOST: localhost:${{ job.services.insecure.ports[10000] }}
     - name: Start uploading coverage report
       uses: shogo82148/actions-goveralls@v1
       with:
