--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,11 @@ jobs:
         image: azazeal/vasctest:latest
         ports:
           - 10000
+        options: >-
+          --health-cmd "nc -z localhost 10000"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 3
 
       insecure:
         image: azazeal/vasctest:latest
@@ -41,6 +46,11 @@ jobs:
           INSECURE: true
         ports:
           - 10000
+        options: >-
+          --health-cmd "nc -z localhost 10000"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 3
 
     strategy:
       matrix:
