--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,18 +33,28 @@ jobs:
       secure:
         image: azazeal/vasctest:latest
         ports:
-          - 10000:10000
+          - 10000
+        options: >-
+          --health-cmd "nc -z localhost 10000"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 3
 
       insecure:
         image: azazeal/vasctest:latest
         env:
           INSECURE: true
         ports:
-          - 10001:10000
+          - 10000
+        options: >-
+          --health-cmd "nc -z localhost 10000"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 3
 
     strategy:
       matrix:
-        go: ['1.16', '1.17']
+        go: ['1.17', '1.18']
 
     steps:
     - name: Install Go
@@ -55,6 +65,10 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests
       run: go test -race -coverpkg=./... -coverprofile=coverage.cov -covermode=atomic ./...
+      env:
+        SECURE_HOST: localhost:${{ job.services.secure.ports[10000] }}
+        SECRET: supersecret
+        INSECURE_HOST: localhost:${{ job.services.insecure.ports[10000] }}
     - name: Start uploading coverage report
       uses: shogo82148/actions-goveralls@v1
       with:
