--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,10 @@ jobs:
           - 10000
         options: >-
           --health-cmd "nc -z localhost 10000"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 3
+          --health-interval 1s
+          --health-timeout 1s
+          --health-retries 10
+          --health-start-period 5s
 
       insecure:
         image: azazeal/vasctest:latest
@@ -48,9 +49,10 @@ jobs:
           - 10000
         options: >-
           --health-cmd "nc -z localhost 10000"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 3
+          --health-interval 1s
+          --health-timeout 1s
+          --health-retries 10
+          --health-start-period 5s
 
     strategy:
       matrix:
