--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
-name: Build Package
+name: Build
 
 on:
+  schedule:
+    - cron: "0 6 * * WED"
   push:
     tags-ignore:
       - "**"
@@ -16,14 +18,23 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  call-lint:
-    name: Call Lint
+  call-ghlint:
+    name: Call Lint Github workflows
+    uses: azazeal/workflows/.github/workflows/ghlint.yml@master
+    permissions:
+      pull-requests: write
+
+  call-golint:
+    name: Call Lint Go package
     uses: azazeal/workflows/.github/workflows/golint.yml@master
+    permissions:
+      pull-requests: write
 
   test:
-    needs: call-lint
-    name: Test
+    needs: call-golint
+    name: Run test suite
     runs-on: ubuntu-latest
+
     services:
       secure:
         image: azazeal/vasctest:latest
@@ -50,33 +61,38 @@ jobs:
           --health-start-period 5s
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-    - name: Setup Go
-      id: setup-go
-      uses: actions/setup-go@v3
-      with:
-        go-version-file: go.mod
-        cache: true
-        check-latest: true
-    - name: Install gotestsum
-      run: |
-        go install gotest.tools/gotestsum@v1
-    - name: Run Test Suite
-      run: |
-        gotestsum -- -race -coverpkg=./... -coverprofile=coverprofile -covermode=atomic ./...
-      env:
-        GOTESTSUM_JSONFILE: gotestsum.json
-        SECURE_HOST: localhost:${{ job.services.secure.ports[10000] }}
-        SECRET: supersecret
-        INSECURE_HOST: localhost:${{ job.services.insecure.ports[10000] }}
-    - name: Annotate Test Suite Results
-      if: ${{ (success() || failure()) && hashFiles('gotestsum.json') != '' }}
-      uses: guyarb/golang-test-annotations@v0.6.0
-      with:
-        test-results: gotestsum.json
-    - name: Start Uploading Coverage Report
-      uses: shogo82148/actions-goveralls@v1
-      with:
-        path-to-profile: coverprofile
+      - name: Checkout code
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+        with:
+          submodules: recursive
 
+      - name: Setup Go
+        id: setup-go
+        uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
+        with:
+          go-version-file: go.mod
+          check-latest: true
+
+      - name: Install gotestsum
+        run: |
+          go install gotest.tools/gotestsum@v1
+
+      - name: Run test suite
+        run: |
+          gotestsum -- -race -coverpkg=./... -coverprofile=coverprofile -covermode=atomic ./...
+        env:
+          GOTESTSUM_JSONFILE: gotestsum.json
+          SECURE_HOST: localhost:${{ job.services.secure.ports['10000'] }}
+          SECRET: supersecret
+          INSECURE_HOST: localhost:${{ job.services.insecure.ports['10000'] }}
+
+      - name: Annotate Test Suite Results
+        if: ${{ (success() || failure()) && hashFiles('gotestsum.json') != '' }}
+        uses: guyarb/golang-test-annotations@v0.6.0
+        with:
+          test-results: gotestsum.json
+
+      - name: Upload coverage to Coveralls
+        uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: coverprofile
